--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -1,95 +1,45 @@
 {
   "name": "snprc_ehr",
-  "version": "0.0.1",
+  "version": "0.23.3",
   "private": true,
   "scripts": {
-    "setup": "npm install",
-    "build": "npm run clean && better-npm-run build:prod",
-    "start": "better-npm-run build:watch",
-    "build-prod": "npm run build",
-    "clean": "better-npm-run clean",
+    "setup": "npm ci --legacy-peer-deps",
+    "build": "npm run build-dev",
+    "build-dev": "npm run clean && cross-env NODE_ENV=development webpack --config node_modules/@labkey/build/webpack/dev.config.js --color",
+    "build-prod": "npm run clean && cross-env NODE_ENV=production webpack --config node_modules/@labkey/build/webpack/prod.config.js --color --progress --profile",
+    "clean": "rimraf resources/views/gen && rimraf resources/web/gen",
+    "start": "cross-env NODE_ENV=development webpack serve --config node_modules/@labkey/build/webpack/watch.config.js",
+    "start-link": "cross-env LINK=true npm run start",
     "test": "cross-env NODE_ENV=test jest",
     "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest --runInBand",
-    "teamcity": "better-npm-run build:jest-teamcity",
-    "lint": "better-npm-run lint",
-    "lint-fix": "better-npm-run lint-fix"
+    "teamcity": "cross-env NODE_ENV=test jest",
+    "lint": "eslint --ext .jsx,.js src/client/",
+    "lint-fix": "eslint --ext .jsx,.js --fix src/client/"
   },
   "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
-  "betterScripts": {
-    "build:watch": {
-      "command": "webpack-dev-server --config webpack/dev.config.js",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "build:prod": {
-      "command": "webpack --config webpack/prod.config.js --progress --profile --colors",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "clean": {
-      "command": "rimraf resources/web/snprc_ehr/gen && rimraf resources/views/gen"
-    },
-    "build:jest-teamcity": {
-      "command": "jest --testResultsProcessor=jest-teamcity-reporter",
-      "env": {
-        "NODE_ENV": "test"
-      }
-    },
-    "lint": {
-      "command": "eslint --ext .jsx,.js src/client/"
-    },
-    "lint-fix": {
-      "command": "eslint --ext .jsx,.js --fix src/client/"
-    }
-  },
   "dependencies": {
-    "@babel/runtime": "^7.10.2",
-    "@labkey/api": "1.10.0",
-    "@labkey/components": "2.154.1",
-    "moment": "^2.26.0",
-    "react": "^16.13.1",
-    "react-bootstrap": "^0.33.1",
-    "react-datepicker": "^2.16.0",
-    "react-dom": "^16.13.1",
-    "react-router": "^3.2.6",
-    "react-select": "^3.1.0"
+    "@labkey/components": "2.242.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.5",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@hot-loader/react-dom": "^16.13.0",
-    "@types/enzyme": "3.10.5",
+    "@labkey/build": "6.12.0-fb-build-jsx.3",
+    "@testing-library/jest-dom": "~5.16.5",
+    "@testing-library/react": "~12.1.5",
+    "@testing-library/user-event": "~12.8.3",
+    "@types/enzyme": "3.10.13",
     "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/jest": "^26.0.13",
-    "@types/jsdom": "^16.2.4",
-    "@types/moment": "^2.13.0",
-    "@types/node": "^14.11.2",
-    "@types/react": "^16.9.49",
-    "@types/react-bootstrap": "^0.32.22",
-    "@types/react-datepicker": "^2.11.1",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-router": "^3.0.23",
-    "@types/react-select": "^3.0.21",
+    "@types/jest": "^29.2.0",
+    "@types/react": "^16.14.34",
+    "@types/react-dom": "^16.9.17",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
+    "babel-jest": "^29.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "better-npm-run": "0.1.1",
-    "bootstrap-sass": "3.4.1",
-    "cross-env": "5.2.1",
-    "css-loader": "3.5.3",
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-adapter-react-16": "^1.15.7",
     "enzyme-async-helpers": "^0.9.1",
-    "enzyme-to-json": "3.5.0",
+    "enzyme-to-json": "3.6.2",
     "eslint": "^7.8.1",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-babel": "^5.3.1",
@@ -97,28 +47,14 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-react": "^7.20.6",
-    "file-loader": "3.0.1",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
+    "jest": "^29.2.2",
+    "jest-cli": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "jest-teamcity-reporter": "^0.9.0",
-    "mini-css-extract-plugin": "^0.11.0",
-    "node-sass": "^6.0.1",
-    "postcss-loader": "3.0.0",
     "prettier": "^2.1.1",
-    "react-hot-loader": "^4.12.21",
-    "react-test-renderer": "^16.13.1",
-    "resolve-url-loader": "^3.1.1",
-    "sass-loader": "^10.1.1",
-    "source-map-loader": "^1.1.0",
-    "style-loader": "^1.2.1",
-    "ts-jest": "^26.3.0",
-    "ts-loader": "6.0.2",
-    "typescript": "^3.9.5",
-    "url-loader": "1.1.2",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "react-test-renderer": "^16.14.0",
+    "setimmediate": "1.0.5",
+    "ts-jest": "29.0.3"
   },
   "jest": {
     "globals": {
@@ -130,15 +66,24 @@
       "js",
       "jsx"
     ],
+    "preset": "ts-jest",
     "setupFilesAfterEnv": [
       "<rootDir>/test/jest.setup.ts"
     ],
     "moduleNameMapper": {
       "\\.(scss)$": "<rootDir>/test/styleMock.ts"
     },
+    "testEnvironment": "jsdom",
     "testRegex": "(\\.(test|spec))\\.([jt]sx?)$",
+    "testResultsProcessor": "jest-teamcity-reporter",
     "transform": {
-      "^.+\\.tsx?$": "ts-jest",
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {
+          "isolatedModules": true,
+          "tsconfig": "node_modules/@labkey/build/webpack/tsconfig.json"
+        }
+      ],
       "^.+\\.jsx?$": "babel-jest"
     },
     "snapshotSerializers": [
