--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snprc_ehr",
-  "version": "0.23.3",
+  "version": "0.23.7",
   "private": true,
   "scripts": {
     "setup": "npm ci --legacy-peer-deps",
@@ -18,12 +18,12 @@
   },
   "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
   "dependencies": {
-    "@labkey/components": "2.242.9"
+    "@labkey/components": "2.349.6"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/polyfill": "^7.11.5",
-    "@labkey/build": "6.12.0-fb-build-jsx.3",
+    "@labkey/build": "6.14.0",
     "@testing-library/jest-dom": "~5.16.5",
     "@testing-library/react": "~12.1.5",
     "@testing-library/user-event": "~12.8.3",
