--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -8,6 +8,7 @@
     "build-prod": "npm run clean && cross-env NODE_ENV=production webpack --config webpack/prod.config.js --color --progress --profile",
     "clean": "rimraf resources/web/snprc_scheduler/app && rimraf resources/web/snprc_scheduler/gen",
     "setup": "npm ci --legacy-peer-deps",
+    "start": "cross-env NODE_ENV=development webpack serve --config webpack/watch.config.js",
     "teamcity": "cross-env NODE_ENV=test jest --testResultsProcessor=jest-teamcity-reporter",
     "test": "cross-env NODE_ENV=test jest"
   },
@@ -35,10 +36,12 @@
     "jest-teamcity-reporter": "0.9.0",
     "mini-css-extract-plugin": "~2.7.6",
     "raf": "3.4.1",
+    "react-hot-loader": "~4.13.1",
     "rimraf": "~5.0.5",
     "style-loader": "~3.3.3",
     "webpack": "~5.88.2",
-    "webpack-cli": "~5.1.4"
+    "webpack-cli": "~5.1.4",
+    "webpack-dev-server": "~4.15.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.19",
