--- a/snprc_scheduler/package.json
+++ b/snprc_scheduler/package.json
@@ -4,49 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npm run clean && better-npm-run build:prod",
-    "build-prod": "npm run build",
-    "build-style": "better-npm-run build:style",
-    "clean": "better-npm-run clean",
+    "build": "npm run build-prod",
+    "build-prod": "npm run clean && cross-env NODE_ENV=production webpack --config webpack/prod.config.js --color --progress --profile",
+    "clean": "rimraf resources/web/snprc_scheduler/app && rimraf resources/web/snprc_scheduler/gen",
     "setup": "npm ci --legacy-peer-deps",
-    "start": "better-npm-run build:style && better-npm-run build:watch",
-    "teamcity": "better-npm-run build:jest-teamcity",
-    "test": "better-npm-run build:jest-test"
-  },
-  "betterScripts": {
-    "clean": {
-      "command": "rimraf resources/web/snprc_scheduler/app && rimraf resources/web/snprc_scheduler/gen"
-    },
-    "build:jest-test": {
-      "command": "jest --config=jest.config.json",
-      "env": {
-        "NODE_ENV": "test"
-      }
-    },
-    "build:prod": {
-      "command": "webpack --config webpack/prod.config.js --progress --profile --colors",
-      "env": {
-        "NODE_ENV": "production"
-      }
-    },
-    "build:style": {
-      "command": "webpack --config webpack/dev-style.config.js --progress",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    },
-    "build:jest-teamcity": {
-      "command": "jest --testResultsProcessor=jest-teamcity-reporter",
-      "env": {
-        "NODE_ENV": "test"
-      }
-    },
-    "build:watch": {
-      "command": "webpack-dev-server --config ./webpack/dev.config.js",
-      "env": {
-        "NODE_ENV": "development"
-      }
-    }
+    "start": "cross-env NODE_ENV=development webpack serve --config webpack/watch.config.js",
+    "teamcity": "cross-env NODE_ENV=test jest --testResultsProcessor=jest-teamcity-reporter",
+    "test": "cross-env NODE_ENV=test jest"
   },
   "repository": {
     "type": "git",
@@ -55,33 +19,29 @@
   "keywords": [],
   "author": "",
   "devDependencies": {
-    "@babel/core": "7.4.5",
-    "@babel/plugin-proposal-class-properties": "7.4.4",
-    "@babel/preset-env": "7.4.5",
-    "@babel/preset-react": "7.0.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "24.8.0",
-    "babel-loader": "8.0.6",
-    "better-npm-run": "0.1.1",
-    "css-hot-loader": "1.4.4",
-    "css-loader": "3.0.0",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.14.0",
-    "enzyme-to-json": "3.3.5",
-    "html-loader": "0.5.5",
-    "html-webpack-plugin": "3.2.0",
-    "jest": "24.8.0",
+    "@babel/core": "~7.22.20",
+    "@babel/plugin-transform-class-properties": "~7.22.5",
+    "@babel/preset-env": "~7.22.20",
+    "@babel/preset-react": "~7.22.15",
+    "ajv": "~8.12.0",
+    "babel-jest": "~29.7.0",
+    "babel-loader": "~9.1.3",
+    "cross-env": "~7.0.3",
+    "css-loader": "~6.8.1",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "~1.15.7",
+    "html-webpack-plugin": "~5.5.3",
+    "jest": "~29.7.0",
+    "jest-environment-jsdom": "~29.7.0",
     "jest-teamcity-reporter": "0.9.0",
-    "lodash": "4.17.13",
-    "mini-css-extract-plugin": "0.7.0",
+    "mini-css-extract-plugin": "~2.7.6",
     "raf": "3.4.1",
-    "react-hot-loader": "4.11.1",
-    "react-table": "6.10.0",
-    "regenerator-runtime": "0.13.2",
-    "style-loader": "0.23.1",
-    "webpack": "4.35.0",
-    "webpack-cli": "3.3.4",
-    "webpack-dev-server": "3.7.2"
+    "react-hot-loader": "~4.13.1",
+    "rimraf": "~5.0.5",
+    "style-loader": "~3.3.3",
+    "webpack": "~5.88.2",
+    "webpack-cli": "~5.1.4",
+    "webpack-dev-server": "~4.15.1"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.19",
@@ -89,20 +49,20 @@
     "@fortawesome/free-regular-svg-icons": "5.9.0",
     "@fortawesome/react-fontawesome": "0.1.4",
     "@fortawesome/fontawesome-free": "5.9.0",
-    "babel-polyfill": "6.26.0",
     "bootstrap": "4.3.1",
     "font-awesome": "4.7.0",
     "immutable": "4.0.0-rc.12",
+    "lodash": "4.17.13",
     "moment": "2.24.0",
     "prop-types": "15.7.2",
-    "react": "16.8.6",
+    "react": "16.14.0",
     "react-bootstrap": "0.32.4",
     "react-bootstrap-table": "4.3.1",
     "react-data-grid": "6.1.0",
     "react-data-grid-addons": "6.1.0",
-    "react-dnd": "8.0.2",
-    "react-dnd-html5-backend": "8.0.2",
-    "react-dom": "16.8.6",
+    "react-dnd": "11.1.3",
+    "react-dnd-html5-backend": "11.1.3",
+    "react-dom": "16.14.0",
     "react-moment": "0.9.2",
     "react-redux": "7.1.0",
     "react-router-dom": "5.0.1",
