--- a/snprc_ehr/package.json
+++ b/snprc_ehr/package.json
@@ -18,7 +18,8 @@
   },
   "test:debug-notes": "See https://jestjs.io/docs/en/asynchronous before running test:debug - in chrome navigate to chrome://inspect",
   "dependencies": {
-    "@labkey/components": "2.349.6"
+    "@labkey/components": "2.349.6",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.11.5",
